# scotus-metalang

./: .flake8  .gitignore  README.md  api_log.db  environment.yml  environment_apple_silicon.yml  heuristic_matches.txt  null_authors.csv  pyproject.toml
data/: README.md
scripts/: api_log_setup.sql  cap_bulk_download.py  inference.py  log_queries.sql  oyez_metadata.py  preprocess.py  run_inference.py  split_superscotus.py
scripts/analysis/: run_inference.py  save_opinion_metadata.py  statutory_filter.py
scripts/models/: build_binary_token_model.py
scripts/notebooks/: cap_via_super_scotus.ipynb  consolidate_authors.ipynb  fixing_bad_opinion_splits.ipynb  fixing_null_cap_author.ipynb  get_opinions_from_bulk.ipynb  inference.ipynb  prediction_analysis.ipynb  scdb_cross_reference.ipynb  scdb_superscotus_analysis.ipynb  score_analysis.ipynb  sentence_segmentation.ipynb  sourcing_scotus_data.ipynb  summary_stats.ipynb
scripts/preprocessing/: README.MD  cap_bulk_download.py  extract_and_split_opinions.py  get_cases_from_bulk_cap.py
segmenter/: README.md
src/scotus_metalang/: authors.py  cap.py  inference.py
src/scotus_metalang/core/: curiam_categories.py  datasets.py
src/scotus_metalang/diachronic_analysis/: analysis.py  authors.py  cap.py  graphing.py  inference.py  prediction_graphing.py  score_graphing.py  summary_graphing.py
src/scotus_metalang/models/: binary_token_model.py
